# Project-Datacompression

./: .gitignore  CMakeLists.txt  Makefile  README.md  blocksize.csv  cmake_install.cmake  default_randsum.csv  default_uniform.csv  sources
extra/: verslag.tex
extra/testresults/: blocksize_specifiek_compression.csv  blocksize_specifiek_decompression.csv  blocksize_standaard_compression.csv  blocksize_standaard_decompression.csv  randsum_specifiek_compression.csv  randsum_specifiek_decompression.csv  randsum_standaard_compression.csv  randsum_standaard_decompression.csv  specifiek_compression_blocksize.csv  specifiek_compression_randsum.csv  specifiek_compression_uniform.csv  specifiek_decompression_blocksize.csv  specifiek_decompression_randsum.csv  specifiek_decompression_uniform.csv  standaard_compression_blocksize.csv  standaard_compression_randsum.csv  standaard_compression_uniform.csv  standaard_decompression_blocksize.csv  standaard_decompression_randsum.csv  standaard_decompression_uniform.csv  uniform_specifiek_compression.csv  uniform_specifiek_decompression.csv  uniform_standaard_compression.csv  uniform_standaard_decompression.csv
files/: testfile_generator.py
src/: main_specifiek.c  main_standaard.c
src/common/: bitcode.c  bitcode.h  check_args.c  check_args.h  common.h  constanst.h  decoder.h  encoder.h  file_info.c  file_info.h  huffman.c  huffman.h  priorityqueue.c  priorityqueue.h  uchar.h
src/specifiek/: decoder.c  differential_coding.c  differential_coding.h  encoder.c  main.c  variable_length_integer.c  variable_length_integer.h
src/standaard/: burrows_wheeler.c  burrows_wheeler.h  circular_string.c  circular_string.h  decoder.c  decoder.h  encoder.c  encoder.h  huffman.c  huffman.h  main.c  move_to_front.c  move_to_front.h  priorityqueue.c  priorityqueue.h
test/: benchmark.sh
test/generate_file/: main.c
test/test_common/: common_tests.c  common_tests.h  test_bitcode.c  test_bitcode.h  test_huffman.c  test_huffman.h  test_priorityqueue.c  test_priorityqueue.h  testmacro.h
test/test_files/: testfile_generator.py
test/test_specifiek/: main.c  test_vli.c  test_vli.h
test/test_standaard/: main.c  test_bitcode.c  test_bitcode.h  test_burrows_wheeler.c  test_burrows_wheeler.h  test_circular_string.c  test_circular_string.h  test_huffman.c  test_huffman.h  test_move_to_front.c  test_move_to_front.h  test_priorityqueue.c  test_priorityqueue.h
